--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="visual">
                 <div class="bg"></div>
-                <img src="../бургер/img/brg.png" alt="Burger">
+                <img src="../burger/img/brg.png" alt="Burger">
             </div>
         </div>
     </div>
